--- a/.github/workflows/scrape.yml
+++ b/.github/workflows/scrape.yml
@@ -32,7 +32,7 @@ jobs:
 
       - name: Run scraper
         run: |
-          python scrape_da_an.py --csv data/da_an_people.csv
+          python scrape_da_an.py --csv data/all_people.csv
           
       - name: Upload debug snapshot (if exists)
         if: always()
@@ -49,7 +49,7 @@ jobs:
           git config user.name "github-actions[bot]"
           git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
           if [ -n "$(git status --porcelain)" ]; then
-            git add data/da_an_people.csv
+            git add data/all_people.csv
             git commit -m "Update data: $(date -u +'%Y-%m-%dT%H:%M:%SZ')"
             git push
           else
